2001-05-30  Arturo Espinosa Aldama  <arturo@ximian.com>

	* parse.pl.in (xst_parse_replace_hash_values): If replaced  value
	is a reference, set that as the interpolated value, not the
	string representation.

	* replace.pl.in (xst_replace_ini_bool_onoff): not required any more.

	* network.pl.in (xst_network_get_interface_replace_table): A typo.
	Bug 3133.
	(xst_network_dialing_get): Added new wvdial capabilities SuSE 70
	requires.
	(xst_network_dialing_set): same.
	(xst_network_get_new_dialing_dev): Get the latest device from the
	dialing hash.
	(xst_network_dial2iface): Convert a dialing profile into a ppp
	interface, for SuSE 7.0.
	(xst_network_suse70_get_ppp): Get ppp interfaces from dialing info.

2001-05-30  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_set_global_kw): Made it sane.
	(xst_boot_set_global): ditto.

	* file.pl.in (xst_file_buffer_save): Treat $buffer as scalar only if it is scalar.

2001-05-29  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_set_ppp_options_re): Respect
	comments and spacing in ppp files.
	(xst_network_set_ppp_options_unsup): Same.

2001-05-29  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_replace_table): Remove RESOLV_CONF
	in SuSE 7.0: it's created by SuSEconfig.

	* file.pl.in (xst_file_remove): Removes a file.

2001-05-29  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (change_user_chfn): Implement. use chfn to set finger infromation.
	(add_user): use (change_user_chfn).
	(change_user): ditto.

2001-05-28  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_parse_images): Preserve leading spaces of images.
	(xst_boot_parse_global): Don't double escape quotes.
	(xst_boot_conf_edit_image): Fixed bug where XstPartitionType lines got wrong.
	(xst_boot_conf_add_image): ditto.

2001-05-25  Hans Petter Jansson  <hpj@ximian.com>

	* file.pl.in (xst_file_backup_rotate_dirs): Create the 'First' directory on